# aoc-2021

./: README.md
day1/: README.md  day1.cabal  hie.yaml
day1/src/: Main.hs
day10/: README.md  day10.cabal
day10/src/: Main.hs
day2/: README.md  day2.cabal
day2/src/: Main.hs
day3/: README.md  day3.cabal
day3/src/: Main.hs
day6/: README.md  day6.cabal  hie.yaml
day6/src/: Main.hs
day7/: README.md  day7.cabal  hie.yaml
day7/src/: Main.hs
