name:                day7
version:             0.1.0.0
author:              Farbod Salamat-Zadeh
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable day6
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       split
